Fix part of T91516: Cycles not rendering geometry nodes instances

Part of the fix is by Jacques. This fixes the most obvious case, but it's
still not clear how to deal with non-mesh geometry instances or how to handle
motion blur for such instances.